--- a/StickerPackExtension/Info.plist
+++ b/StickerPackExtension/Info.plist
@@ -20,6 +20,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>2</string>
+	<key>MSMessagesExtensionStoreIconName</key>
+	<string>Huyak Stickers</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
